--- a/public/assets/scss/_variables.scss
+++ b/public/assets/scss/_variables.scss
@@ -14,7 +14,7 @@ $color-three: #0c3a30;
 $color-four: #e6fd5a;
 $color-five: #0e3e2f;
 $color-six: #dfff5e;
-$color-seven: #53ab95;
+$color-seven: #7d7c4f;
 $color-eight: #1f5e59;
 $color-nine: #d0ff45;
 $light-bg-one: #ebf3ee;
